--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,10 +5,13 @@
       android:versionName="1.0"
       android:installLocation="preferExternal">
     <uses-sdk android:minSdkVersion="8" />
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
     <application android:label="@string/app_name"
+ 			     android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
                  android:debuggable="true" android:icon="@drawable/ofwgreen">
         <activity android:name="OFActivity"
-                  android:label="@string/app_name" android:configChanges="orientation">
+                  android:label="@string/app_name"> <!--  android:configChanges="orientation"> -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
